--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -140,12 +140,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:imeOptions="actionGo"
                 android:drawableStart="@drawable/ic_lock_login"
                 android:drawableLeft="@drawable/ic_lock_login"
                 android:drawablePadding="5dp"
                 android:gravity="top|start"
                 android:hint="Password"
+                android:imeOptions="actionGo"
                 android:inputType="textPassword"
                 android:lines="1"
                 android:maxLines="1"
@@ -194,6 +194,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:paddingBottom="20dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:paddingTop="10dp"
                 android:text="Forgot your password?"
                 android:textColor="@color/gray_acent"
                 app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
