--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="secondary">#fcca57</color>
     <color name="gray">#C8C8C8</color>
     <color name="gray_acent">#757575</color>
+    <color name="password_box">#f6f6f6</color>
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
