Login screen / forgot password

--- a/app/src/main/res/layout/activity_recovery_password.xml
+++ b/app/src/main/res/layout/activity_recovery_password.xml
@@ -10,36 +10,71 @@
         <variable
             name="isRecoveryCorrect"
             type="boolean" />
+
+        <variable
+            name="userEmail"
+            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/recovery_password_root"
         tools:context=".views.activities.RecoveryPasswordActivity">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Enter 4 digit recovery code"
-            android:textSize="25sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
+            android:id="@+id/guidelineTop"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.22" />
+            app:layout_constraintGuide_percent="0.17" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineBottom"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.90" />
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ingrese el codigo de 4 digitos"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
+
+
+        <TextView
+            android:id="@+id/contentText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:gravity="center_horizontal"
+            android:text="@{`El codigo de recuperacion fue enviado al correo `+ userEmail +`, por favor ingreselo a continuacion.`}"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+
+        <!--        <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_percent="0.22" />-->
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineSecond"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.35" />
+            app:layout_constraintGuide_percent="0.45" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineLeft"
@@ -56,25 +91,37 @@
             app:layout_constraintGuide_percent="0.90" />
 
 
+        <View
+            android:id="@+id/codeSeparatorGuide"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/contentText" />
+
         <EditText
             android:id="@+id/recoveryFirstDigit"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="15dp"
-            android:background="@drawable/recovery_number_box"
+            android:background="@drawable/custom_recovery_box"
 
             android:digits="0123456789"
-            android:gravity="center_horizontal"
+            android:enabled="@{isRecoveryCorrect ? false:true}"
+            android:gravity="center_horizontal|center_vertical"
+            android:imeOptions="actionGo"
             android:inputType="number"
             android:maxLength="1"
             android:maxLines="1"
-
             android:textAlignment="center"
+            android:textSize="20sp"
+
+            app:flow_verticalAlign="center"
             app:layout_constraintBottom_toTopOf="@+id/guidelineSecond"
             app:layout_constraintEnd_toStartOf="@+id/recoverySecondDigit"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toTopOf="@+id/guideline" />
+            app:layout_constraintTop_toTopOf="@+id/codeSeparatorGuide" />
 
         <EditText
             android:id="@+id/recoverySecondDigit"
@@ -82,18 +129,22 @@
             android:layout_height="0dp"
 
             android:layout_margin="15dp"
-            android:background="@drawable/recovery_number_box"
+            android:background="@drawable/custom_recovery_box"
             android:digits="0123456789"
-            android:gravity="center_horizontal"
+            android:enabled="@{isRecoveryCorrect ? false:true}"
+            android:gravity="center_horizontal|center_vertical"
+            android:imeOptions="actionGo"
             android:inputType="number"
-
             android:maxLength="1"
+
+
             android:maxLines="1"
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/guidelineSecond"
             app:layout_constraintEnd_toStartOf="@+id/recoveryThirdDigit"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/recoveryFirstDigit"
-            app:layout_constraintTop_toTopOf="@+id/guideline" />
+            app:layout_constraintTop_toTopOf="@+id/codeSeparatorGuide" />
 
         <EditText
             android:id="@+id/recoveryThirdDigit"
@@ -101,18 +152,22 @@
             android:layout_height="0dp"
             android:layout_margin="15dp"
 
-            android:background="@drawable/recovery_number_box"
+            android:background="@drawable/custom_recovery_box"
             android:digits="0123456789"
-            android:gravity="center_horizontal"
+            android:enabled="@{isRecoveryCorrect ? false:true}"
+            android:gravity="center_horizontal|center_vertical"
+            android:imeOptions="actionGo"
             android:inputType="number"
             android:maxLength="1"
-
             android:maxLines="1"
+
+
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/guidelineSecond"
             app:layout_constraintEnd_toStartOf="@+id/recoveryFourthDigit"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/recoverySecondDigit"
-            app:layout_constraintTop_toTopOf="@+id/guideline" />
+            app:layout_constraintTop_toTopOf="@+id/codeSeparatorGuide" />
 
         <EditText
             android:id="@+id/recoveryFourthDigit"
@@ -120,55 +175,130 @@
             android:layout_height="0dp"
             android:layout_margin="15dp"
 
-            android:background="@drawable/recovery_number_box"
+            android:background="@drawable/custom_recovery_box"
             android:digits="0123456789"
-            android:gravity="center_horizontal"
+            android:enabled="@{isRecoveryCorrect ? false:true}"
+            android:gravity="center_horizontal|center_vertical"
+            android:imeOptions="actionDone"
             android:inputType="number"
             android:maxLength="1"
-
             android:maxLines="1"
+
+
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/guidelineSecond"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/recoveryThirdDigit"
-            app:layout_constraintTop_toTopOf="@+id/guideline" />
+            app:layout_constraintTop_toTopOf="@+id/codeSeparatorGuide" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:visibility="@{isRecoveryCorrect ? View.VISIBLE:View.GONE}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
             app:layout_constraintTop_toTopOf="@+id/guidelineSecond">
 
-            <EditText
-                android:id="@+id/newPasswordRecovery"
+            <TextView
+                android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="New password"
+                android:gravity="center_horizontal"
+                android:text="Nueva Contraseña"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/newPasswordConfirmRecovery"
+
+            <TextView
+                android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Confirm new password"
+                android:layout_marginTop="15dp"
+                android:gravity="center_horizontal"
+                android:text="Ingrese su nueva contraseña"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/newPasswordRecovery" />
+                app:layout_constraintTop_toBottomOf="@+id/textView12" />
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/newResetPassword_inputLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:hintEnabled="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView13"
+                app:passwordToggleEnabled="true">
+
+                <EditText
+                    android:id="@+id/newresetpassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/custom_new_password_box"
+                    android:drawableStart="@drawable/ic_lock_login"
+                    android:drawableLeft="@drawable/ic_lock_login"
+                    android:drawablePadding="12dp"
+                    android:hint="ingrese la nueva contraseña"
+                    android:inputType="textPassword"
+                    android:padding="12dp"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/newResetConfirmPassword_inputLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:hintEnabled="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/newResetPassword_inputLayout"
+                app:passwordToggleEnabled="true">
+
+                <EditText
+                    android:id="@+id/newConfirmResetpassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/custom_new_password_box"
+                    android:drawableStart="@drawable/ic_lock_login"
+                    android:drawableLeft="@drawable/ic_lock_login"
+                    android:drawablePadding="12dp"
+                    android:hint="confirme la nueva contraseña"
+                    android:inputType="textPassword"
+                    android:padding="12dp"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:id="@+id/btnConfirmNewRecoveryPassword"
+                android:id="@+id/btnConfirmeUpdatePassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:background="@drawable/confirm_button"
+                android:paddingStart="15dp"
+                android:paddingLeft="10dp"
+                android:paddingEnd="15dp"
                 android:text="Confirmar"
+                android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/newPasswordConfirmRecovery" />
+                app:layout_constraintTop_toBottomOf="@+id/newResetConfirmPassword_inputLayout" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
