--- a/app/src/main/res/drawable/recovery_password_root.xml
+++ b/app/src/main/res/drawable/recovery_password_root.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/password_box" />
-    <corners android:radius="10dp"/>
-
+    <solid android:color="@color/recovery_root" />
+    <corners android:radius="@dimen/radius_card" />
 
 </shape>
