--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,17 +2,24 @@
 <resources>
 
     <color name="primary">#20303f</color>
+    <color name="primary_second">#21222d</color>
     <color name="secondary">#fcca57</color>
     <color name="gray">#C8C8C8</color>
     <color name="gray_acent">#757575</color>
+    <color name="green_confirm">#1abc9c</color>
     <color name="password_box">#f6f6f6</color>
+    <color name="recovery_root">#f2f5fc</color>
+    <color name="recovery_card">#ffffff</color>
+    <color name="success">#4BB543</color>
+    <color name="error">#ff0033</color>
+
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#1B1C1E</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
 </resources>
