--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.EasyStock" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.EasyStock" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#fcca57</item>
         <item name="colorPrimaryVariant">#20303f</item>
