--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -130,6 +130,7 @@
                 android:lines="1"
                 android:maxLines="1"
                 android:paddingBottom="20dp"
+                android:text="ADMIN"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                 app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
@@ -150,6 +151,7 @@
                 android:lines="1"
                 android:maxLines="1"
                 android:paddingBottom="20dp"
+                android:text="1234"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                 app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
